// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alova template > snapshot tests > should match snapshot for commonjs type 1`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
const { createAlova } = require('alova');
const adapterFetch = require('alova/fetch');

const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: adapterFetch(),
  beforeRequest: method => {},
  responded: (res, method) => (method.config?.blob ? res.blob() : res.json())
});

module.exports = { alovaInstance };
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 2`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */

function buildPayload(url, defaultConfig, apiName, config) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}

/**
 * @typedef {{
 *  tag: typeof import('./services/tag.cjs')
 *  pet: typeof import('./services/pet.cjs')
 *  store: typeof import('./services/store.cjs')
 *  user: typeof import('./services/user.cjs')
 * }} ServicesMap
 */

/**
 * @template {keyof ServicesMap} T
 * @template {Record<string, (config: any) => any>} [TagedMap = ServicesMap[T]]
 * @template [ConfigMap = { [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]> }]
 * @param {T} _
 * @param {ConfigMap} configMap
 * @returns {ConfigMap}
 */
function setMethodDefaultConfig(_, configMap) {
  return configMap;
}

/**
 * @template {object} C
 * @template {string} Key
 * @param {C} defaultConfig
 * @param {Key} tagName
 * @returns {C extends { [K in Key]: infer V } ? V : {}}
 */
function resolveTagDefaultConfig(defaultConfig, tagName) {
  const raw = defaultConfig[tagName];
  return raw || {};
}

module.exports = { buildPayload, setMethodDefaultConfig, resolveTagDefaultConfig };
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 3`] = `
"import type { alovaInstance } from './index.cjs';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> = CollapsedAlova extends Alova<
  AlovaGenerics<
    any,
    any,
    infer RequestConfig,
    infer Response,
    infer ResponseHeader,
    infer L1Cache,
    infer L2Cache,
    infer SE
  >
>
  ? Omit<
      AlovaMethodCreateConfig<
        AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
        any,
        Responded
      >,
      'params'
    >
  : never;

export type Alova2Method<Responded> = CollapsedAlova extends Alova<
  AlovaGenerics<
    any,
    any,
    infer RequestConfig,
    infer Response,
    infer ResponseHeader,
    infer L1Cache,
    infer L2Cache,
    infer SE
  >
>
  ? Method<
      AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>
    >
  : never;

export type TagDefaultConfig<C, Key extends string> = C extends { [K in Key]: infer V } ? V : {}
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 4`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact: 
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse  {
  code?: number
  type?: string
  message?: string
}
export interface Category  {
  id?: number
  name?: string
}
export interface Order  {
  id?: number
  petId?: number
  quantity?: number
  shipDate?: string
  /**
  * Order Status
   */
  
  status?: "placed" | "approved" | "delivered"
  complete?: boolean
}
export interface Pet  {
  id?: number
  /**
  * Pet category
  * ---
  * A category for a pet
   */
  
  category?: Category
  name: string
  photoUrls: string[]
  tags?: Tag[]
  /**
  * pet status in the store
  * @deprecated
   */
  
  status?: "available" | "pending" | "sold"
}
export interface Tag  {
  id?: number
  name?: string
}
export interface User  {
  id?: number
  username?: string
  firstName?: string
  lastName?: string
  email?: string
  password?: string
  phone?: string
  /**
  * User Status
   */
  
  userStatus?: number
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 5`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
const { setMethodDefaultConfig } = require('../helper.cjs');

const tagDefaultConfig = setMethodDefaultConfig('tag', {});
const petDefaultConfig = setMethodDefaultConfig('pet', {});
const storeDefaultConfig = setMethodDefaultConfig('store', {});
const userDefaultConfig = setMethodDefaultConfig('user', {});

module.exports.tagDefaultConfig = tagDefaultConfig;
module.exports.petDefaultConfig = petDefaultConfig;
module.exports.storeDefaultConfig = storeDefaultConfig;
module.exports.userDefaultConfig = userDefaultConfig;
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 6`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload, resolveTagDefaultConfig } = require('../helper.cjs');
const defaultConfig = require('./index.cjs');

const petDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'petDefaultConfig');

/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function updatePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
function findPetsByStatus(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
function findPetsByTags(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/findByTags', petDefaultConfig, findPetsByTags.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function getPetById(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function updatePetWithForm(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, updatePetWithForm.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deletePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
function uploadFile(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

module.exports = {
  updatePet,
  findPetsByStatus,
  findPetsByTags,
  getPetById,
  updatePetWithForm,
  deletePet,
  uploadFile
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 7`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload, resolveTagDefaultConfig } = require('../helper.cjs');
const defaultConfig = require('./index.cjs');

const storeDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'storeDefaultConfig');

/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
function getInventory(config) {
  const { url, data, mergedConfig } = buildPayload('/store/inventory', storeDefaultConfig, getInventory.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
function placeOrder(config) {
  const { url, data, mergedConfig } = buildPayload('/store/order', storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
function getOrderById(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deleteOrder(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

module.exports = {
  getInventory,
  placeOrder,
  getOrderById,
  deleteOrder
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 8`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload, resolveTagDefaultConfig } = require('../helper.cjs');
const defaultConfig = require('./index.cjs');

const tagDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'tagDefaultConfig');

/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function pet24(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

module.exports = {
  pet24
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 9`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload, resolveTagDefaultConfig } = require('../helper.cjs');
const defaultConfig = require('./index.cjs');

const userDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'userDefaultConfig');

/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user', userDefaultConfig, createUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUsersWithArrayInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUsersWithListInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
function loginUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/login', userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function logoutUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/logout', userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
function getUserByName(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, getUserByName.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function updateUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, updateUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deleteUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, deleteUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

module.exports = {
  createUser,
  createUsersWithArrayInput,
  createUsersWithListInput,
  loginUser,
  logoutUser,
  getUserByName,
  updateUser,
  deleteUser
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 1`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
import { createAlova } from 'alova';
import adapterFetch from 'alova/fetch';

export const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: adapterFetch(),
  beforeRequest: method => {},
  responded: (res, method) => (method.config?.blob ? res.blob() : res.json())
});
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 2`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */

export function buildPayload(url, defaultConfig, apiName, config) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}

/**
 * @typedef {{
 *  tag: typeof import('./services/tag')
 *  pet: typeof import('./services/pet')
 *  store: typeof import('./services/store')
 *  user: typeof import('./services/user')
 * }} ServicesMap
 */

/**
 * @template {keyof ServicesMap} T
 * @template {Record<string, (config: any) => any>} [TagedMap = ServicesMap[T]]
 * @template [ConfigMap = { [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]> }]
 * @param {T} _
 * @param {ConfigMap} configMap
 * @returns {ConfigMap}
 */
export function setMethodDefaultConfig(_, configMap) {
  return configMap;
}

/**
 * @template {object} C
 * @template {string} Key
 * @param {C} defaultConfig
 * @param {Key} tagName
 * @returns {C extends { [K in Key]: infer V } ? V : {}}
 */
export function resolveTagDefaultConfig(defaultConfig, tagName) {
  const raw = defaultConfig[tagName];
  return raw || {};
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 3`] = `
"import type { alovaInstance } from './index.js';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Omit<
        AlovaMethodCreateConfig<
          AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
          any,
          Responded
        >,
        'params'
      >
    : never;

export type Alova2Method<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Method<AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>>
    : never;

export type TagDefaultConfig<C, Key extends string> = C extends { [K in Key]: infer V } ? V : {};
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 4`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse {
  code?: number;
  type?: string;
  message?: string;
}
export interface Category {
  id?: number;
  name?: string;
}
export interface Order {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  /**
   * Order Status
   */

  status?: 'placed' | 'approved' | 'delivered';
  complete?: boolean;
}
export interface Pet {
  id?: number;
  /**
   * Pet category
   * ---
   * A category for a pet
   */

  category?: Category;
  name: string;
  photoUrls: string[];
  tags?: Tag[];
  /**
   * pet status in the store
   * @deprecated
   */

  status?: 'available' | 'pending' | 'sold';
}
export interface Tag {
  id?: number;
  name?: string;
}
export interface User {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  /**
   * User Status
   */

  userStatus?: number;
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 5`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
import { setMethodDefaultConfig } from '../helper.js';

export const tagDefaultConfig = setMethodDefaultConfig('tag', {});
export const petDefaultConfig = setMethodDefaultConfig('pet', {});
export const storeDefaultConfig = setMethodDefaultConfig('store', {});
export const userDefaultConfig = setMethodDefaultConfig('user', {});
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 6`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload, resolveTagDefaultConfig } from '../helper.js';
import * as defaultConfig from './index.js';

const petDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'petDefaultConfig');

/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function updatePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByStatus(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByTags(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/findByTags', petDefaultConfig, findPetsByTags.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function getPetById(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updatePetWithForm(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, updatePetWithForm.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deletePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
export function uploadFile(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 7`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload, resolveTagDefaultConfig } from '../helper.js';
import * as defaultConfig from './index.js';

const storeDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'storeDefaultConfig');

/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
export function getInventory(config) {
  const { url, data, mergedConfig } = buildPayload('/store/inventory', storeDefaultConfig, getInventory.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function placeOrder(config) {
  const { url, data, mergedConfig } = buildPayload('/store/order', storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function getOrderById(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteOrder(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 8`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload, resolveTagDefaultConfig } from '../helper.js';
import * as defaultConfig from './index.js';

const tagDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'tagDefaultConfig');

/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function pet24(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 9`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload, resolveTagDefaultConfig } from '../helper.js';
import * as defaultConfig from './index.js';

const userDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'userDefaultConfig');

/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user', userDefaultConfig, createUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithArrayInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithListInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
export function loginUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/login', userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function logoutUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/logout', userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
export function getUserByName(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, getUserByName.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updateUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, updateUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, deleteUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 1`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
import { createAlova } from 'alova';
import fetchAdapter from 'alova/fetch';

export const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: fetchAdapter(),
  beforeRequest: method => {},
  responded: (res, method) => {
    return method.meta?.blob ? res.blob() : res.json();
  }
});
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 2`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */

export function buildPayload(url: string, defaultConfig: Record<string, any>, apiName: string, config: any) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}

export type ServicesMap = {
  tag: typeof import('./services/tag');
  pet: typeof import('./services/pet');
  store: typeof import('./services/store');
  user: typeof import('./services/user');
};

export function setMethodDefaultConfig<
  T extends keyof ServicesMap,
  TagedMap extends Record<string, (config: any) => any> = ServicesMap[T],
  ConfigMap = { [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]> }
>(_: T, configMap: ConfigMap): ConfigMap {
  return configMap;
}

export function resolveTagDefaultConfig<C extends object, Key extends string>(defaultConfig: C, tagName: Key) {
  const raw = (defaultConfig as any)[tagName];
  return (raw || {}) as C extends { [K in Key]: infer V } ? V : {};
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 3`] = `
"import type { alovaInstance } from './index';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Omit<
        AlovaMethodCreateConfig<
          AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
          any,
          Responded
        >,
        'params'
      >
    : never;

export type Alova2Method<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Method<AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>>
    : never;

export type TagDefaultConfig<C, Key extends string> = C extends { [K in Key]: infer V } ? V : {};
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 4`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse {
  code?: number;
  type?: string;
  message?: string;
}
export interface Category {
  id?: number;
  name?: string;
}
export interface Order {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  /**
   * Order Status
   */

  status?: 'placed' | 'approved' | 'delivered';
  complete?: boolean;
}
export interface Pet {
  id?: number;
  /**
   * Pet category
   * ---
   * A category for a pet
   */

  category?: Category;
  name: string;
  photoUrls: string[];
  tags?: Tag[];
  /**
   * pet status in the store
   * @deprecated
   */

  status?: 'available' | 'pending' | 'sold';
}
export interface Tag {
  id?: number;
  name?: string;
}
export interface User {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  /**
   * User Status
   */

  userStatus?: number;
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 5`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * NOTE: This file is generated only once and will NOT be overwritten on regeneration.
 * You can safely customize it to fit your needs.
 */
import { setMethodDefaultConfig } from '../helper';

export const tagDefaultConfig = setMethodDefaultConfig('tag', {});
export const petDefaultConfig = setMethodDefaultConfig('pet', {});
export const storeDefaultConfig = setMethodDefaultConfig('store', {});
export const userDefaultConfig = setMethodDefaultConfig('user', {});
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 6`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload, resolveTagDefaultConfig } from '../helper';
import * as defaultConfig from '.';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import type * as ComponentTypes from '../components';

const petDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'petDefaultConfig');

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof petDefaultConfig
    ? (typeof petDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof petDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

export type updatePetResponse = ComponentTypes.Pet;
export type updatePetData = ComponentTypes.Pet;
export interface updatePetExtraConfig {
  data: updatePetData;
}
/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function updatePet<Config extends Alova2MethodConfig<updatePetResponse> & updatePetExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'updatePet', updatePetResponse>> {
  const { url, data, mergedConfig } = buildPayload('/pet', petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updatePet', updatePetResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

export type findPetsByStatusResponse = ComponentTypes.Pet[];
export type findPetsByStatusParams = {
  /**
   * Status values that need to be considered for filter
   * @deprecated
   */

  status: ('available' | 'pending' | 'sold')[];
};
export interface findPetsByStatusExtraConfig {
  params: findPetsByStatusParams;
}
/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByStatus<
  Config extends Alova2MethodConfig<findPetsByStatusResponse> & findPetsByStatusExtraConfig
>(config: Config): Alova2Method<ExtractResponded<Config, 'findPetsByStatus', findPetsByStatusResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'findPetsByStatus', findPetsByStatusResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type findPetsByTagsResponse = ComponentTypes.Pet[];
export type findPetsByTagsParams = {
  /**
   * Tags to filter by
   */

  tags: string[];
};
export interface findPetsByTagsExtraConfig {
  params: findPetsByTagsParams;
}
/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByTags<Config extends Alova2MethodConfig<findPetsByTagsResponse> & findPetsByTagsExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'findPetsByTags', findPetsByTagsResponse>> {
  const { url, data, mergedConfig } = buildPayload('/pet/findByTags', petDefaultConfig, findPetsByTags.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'findPetsByTags', findPetsByTagsResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type getPetByIdResponse = ComponentTypes.Pet;
export type getPetByIdPathParams = {
  /**
   * ID of pet to return
   */

  petId: number;
};
export interface getPetByIdExtraConfig {
  pathParams: getPetByIdPathParams;
}
/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function getPetById<Config extends Alova2MethodConfig<getPetByIdResponse> & getPetByIdExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getPetById', getPetByIdResponse>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getPetById', getPetByIdResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type updatePetWithFormResponse = unknown;
export type updatePetWithFormPathParams = {
  /**
   * ID of pet that needs to be updated
   */

  petId: number;
};
export type updatePetWithFormData = {
  /**
   * Updated name of the pet
   */

  name?: string;
  /**
   * Updated status of the pet
   */

  status?: string;
};
export interface updatePetWithFormExtraConfig {
  pathParams: updatePetWithFormPathParams;
  data: updatePetWithFormData;
}
/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updatePetWithForm<
  Config extends Alova2MethodConfig<updatePetWithFormResponse> & updatePetWithFormExtraConfig
>(config: Config): Alova2Method<ExtractResponded<Config, 'updatePetWithForm', updatePetWithFormResponse>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, updatePetWithForm.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updatePetWithForm', updatePetWithFormResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

export type deletePetResponse = unknown;
export type deletePetPathParams = {
  /**
   * ComponentTypes.Pet id to delete
   */

  petId: number;
};
export interface deletePetExtraConfig {
  pathParams: deletePetPathParams;
}
/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deletePet<Config extends Alova2MethodConfig<deletePetResponse> & deletePetExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deletePet', deletePetResponse>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'deletePet', deletePetResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

export type uploadFileResponse = ComponentTypes.ApiResponse;
export type uploadFilePathParams = {
  /**
   * ID of pet to update
   */

  petId: number;
};
export type uploadFileData = {
  /**
   * Additional data to pass to server
   */

  additionalMetadata?: string;
  /**
   * file to upload
   */

  file?: Blob;
};
export interface uploadFileExtraConfig {
  pathParams: uploadFilePathParams;
  data: uploadFileData;
}
/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
export function uploadFile<Config extends Alova2MethodConfig<uploadFileResponse> & uploadFileExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'uploadFile', uploadFileResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'uploadFile', uploadFileResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 7`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload, resolveTagDefaultConfig } from '../helper';
import * as defaultConfig from '.';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import type * as ComponentTypes from '../components';

const storeDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'storeDefaultConfig');

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof storeDefaultConfig
    ? (typeof storeDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof storeDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

export type getInventoryResponse = Record<string, number>;
export interface getInventoryExtraConfig {}
/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
export function getInventory<Config extends Alova2MethodConfig<getInventoryResponse> & getInventoryExtraConfig>(
  config?: Config
): Alova2Method<ExtractResponded<Config, 'getInventory', getInventoryResponse>> {
  const { url, data, mergedConfig } = buildPayload('/store/inventory', storeDefaultConfig, getInventory.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getInventory', getInventoryResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type placeOrderResponse = ComponentTypes.Order;
export type placeOrderData = ComponentTypes.Order;
export interface placeOrderExtraConfig {
  data: placeOrderData;
}
/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function placeOrder<Config extends Alova2MethodConfig<placeOrderResponse> & placeOrderExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'placeOrder', placeOrderResponse>> {
  const { url, data, mergedConfig } = buildPayload('/store/order', storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'placeOrder', placeOrderResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

export type getOrderByIdResponse = ComponentTypes.Order;
export type getOrderByIdPathParams = {
  /**
   * ID of pet that needs to be fetched
   */

  orderId: number;
};
export interface getOrderByIdExtraConfig {
  pathParams: getOrderByIdPathParams;
}
/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function getOrderById<Config extends Alova2MethodConfig<getOrderByIdResponse> & getOrderByIdExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getOrderById', getOrderByIdResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'getOrderById', getOrderByIdResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type deleteOrderResponse = unknown;
export type deleteOrderPathParams = {
  /**
   * ID of the order that needs to be deleted
   */

  orderId: string;
};
export interface deleteOrderExtraConfig {
  pathParams: deleteOrderPathParams;
}
/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteOrder<Config extends Alova2MethodConfig<deleteOrderResponse> & deleteOrderExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deleteOrder', deleteOrderResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'deleteOrder', deleteOrderResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 8`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload, resolveTagDefaultConfig } from '../helper';
import * as defaultConfig from '.';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import type * as ComponentTypes from '../components';

const tagDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'tagDefaultConfig');

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof tagDefaultConfig
    ? (typeof tagDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof tagDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

export type pet24Response = ComponentTypes.Pet;
export type pet24Data = ComponentTypes.Pet;
export interface pet24ExtraConfig {
  data: pet24Data;
}
/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function pet24<Config extends Alova2MethodConfig<pet24Response> & pet24ExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'pet24', pet24Response>> {
  const { url, data, mergedConfig } = buildPayload('/pet', tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'pet24', pet24Response>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 9`] = `
"/* eslint-disable */
/* biome-ignore-all */
/* stylelint-disable */
/* editorconfig-checker-disable-file */
/* oxlint-disable */
/* oxcformat-ignore */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://worma.js.org
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload, resolveTagDefaultConfig } from '../helper';
import * as defaultConfig from '.';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import type * as ComponentTypes from '../components';

const userDefaultConfig = resolveTagDefaultConfig(defaultConfig, 'userDefaultConfig');

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof userDefaultConfig
    ? (typeof userDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof userDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

export type createUserResponse = null;
export type createUserData = ComponentTypes.User;
export interface createUserExtraConfig {
  data: createUserData;
}
/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUser<Config extends Alova2MethodConfig<createUserResponse> & createUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'createUser', createUserResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user', userDefaultConfig, createUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'createUser', createUserResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

export type createUsersWithArrayInputResponse = null;
export type createUsersWithArrayInputData = ComponentTypes.User[];
export interface createUsersWithArrayInputExtraConfig {
  data: createUsersWithArrayInputData;
}
/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithArrayInput<
  Config extends Alova2MethodConfig<createUsersWithArrayInputResponse> & createUsersWithArrayInputExtraConfig
>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'createUsersWithArrayInput', createUsersWithArrayInputResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request<
    ExtractResponded<Config, 'createUsersWithArrayInput', createUsersWithArrayInputResponse>
  >({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

export type createUsersWithListInputResponse = null;
export type createUsersWithListInputData = ComponentTypes.User[];
export interface createUsersWithListInputExtraConfig {
  data: createUsersWithListInputData;
}
/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithListInput<
  Config extends Alova2MethodConfig<createUsersWithListInputResponse> & createUsersWithListInputExtraConfig
>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'createUsersWithListInput', createUsersWithListInputResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'createUsersWithListInput', createUsersWithListInputResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

export type loginUserResponse = string;
export type loginUserParams = {
  /**
   * The user name for login
   */

  username: string;
  /**
   * The password for login in clear text
   */

  password: string;
};
export interface loginUserExtraConfig {
  params: loginUserParams;
}
/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
export function loginUser<Config extends Alova2MethodConfig<loginUserResponse> & loginUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'loginUser', loginUserResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user/login', userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'loginUser', loginUserResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type logoutUserResponse = null;
export interface logoutUserExtraConfig {}
/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function logoutUser<Config extends Alova2MethodConfig<logoutUserResponse> & logoutUserExtraConfig>(
  config?: Config
): Alova2Method<ExtractResponded<Config, 'logoutUser', logoutUserResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user/logout', userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'logoutUser', logoutUserResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type getUserByNameResponse = ComponentTypes.User;
export type getUserByNamePathParams = {
  /**
   * The name that needs to be fetched. Use user1 for testing.
   */

  username: string;
};
export interface getUserByNameExtraConfig {
  pathParams: getUserByNamePathParams;
}
/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
export function getUserByName<Config extends Alova2MethodConfig<getUserByNameResponse> & getUserByNameExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getUserByName', getUserByNameResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, getUserByName.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getUserByName', getUserByNameResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

export type updateUserResponse = unknown;
export type updateUserPathParams = {
  /**
   * name that need to be deleted
   */

  username: string;
};
export type updateUserData = ComponentTypes.User;
export interface updateUserExtraConfig {
  pathParams: updateUserPathParams;
  data: updateUserData;
}
/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updateUser<Config extends Alova2MethodConfig<updateUserResponse> & updateUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'updateUser', updateUserResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, updateUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updateUser', updateUserResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

export type deleteUserResponse = unknown;
export type deleteUserPathParams = {
  /**
   * The name that needs to be deleted
   */

  username: string;
};
export interface deleteUserExtraConfig {
  pathParams: deleteUserPathParams;
}
/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteUser<Config extends Alova2MethodConfig<deleteUserResponse> & deleteUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deleteUser', deleteUserResponse>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, deleteUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'deleteUser', deleteUserResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;
